--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,16 @@ body{
     display: flex;
     flex-direction: column;
     margin: 0;
+    background-color: #1F2937;
+}
+
+button {
+    padding: 8px 32px;
+    text-align: center;
+    border-radius: 8px;
+    font-size: 16px;
+    color: #F9FAF8;
+    background-color: #3882F6;
 }
 
 .header {
@@ -14,13 +24,15 @@ body{
 }
 
 .header-logo {
-    color: white;
+    color: #F9FAF8;
     font-weight: 700;
+    font-size: 24px;
 }
 
 .header-links a {
     text-decoration: none;
-    color: white;
+    color: #E5E7EB;
+    font-size: 18px;
 }
 
 ul {
@@ -34,22 +46,88 @@ ul {
 
 .body{
     display: flex;
+    flex-direction: column;
     flex: 1;
+}
+
+.content1 {
+    background-color: #1F2937;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 80px;
+    gap: 32px;
+}
+
+.content1-right {
+    flex: 1;
+}
+
+.main-title {
+    font-size: 48px;
+    color: #F9FAF8;
+    font-weight: 800;
+}
+
+.subtext {
+    color: #E5E7EB;
+    font-size: 18px;
+    margin-bottom: 8px;
+}
+
+.sign-up {
+    border: none;
+}
+
+.image1 {
+    background-color: #6D747D;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex: 1;
+    height: 200px;
+}
+
+.image1 div {
+    color: #E5E7EB;
+}
+
+.content2 {
+    background-color: white;
+}
+.content3 {
+    background-color: #E5E7EB;
+    color: #1F2937;
+    padding: 80px;
+    display: flex;
+    flex-direction: column;
+}
+
+.quote {
+    font-size: 36px;
+    font-style: italic;
+    margin: 0 40px;
+}
+
+.author {
+    font-size: 25px;
+    font-weight: bold;
+    align-self: flex-end;
+    padding: 8px;
+    margin-right: 60px;
+}
+
+
+.content4 {
+    background-color: white;
 }
 
 .footer {
     background-color: #1F2937;
-    color: white;
+    color: #E5E7EB;
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 16px;
     font-size: 10px;
-}
-
-.medio {
-    background-color: #E5E7EB;
-    font-size: 36px;
-    font-style: italic;
-    color: #1F2937;
 }
